fix: Poor contrast in keymap tab in dark mode

--- a/packages/uhk-web/src/styles/themes/_dark.scss
+++ b/packages/uhk-web/src/styles/themes/_dark.scss
@@ -86,6 +86,7 @@ $tooltip-border-color: #444;
     --color-popover-bg-light: #{$color-popover-bg-light};
     --color-popover-border: #{$color-popover-border};
     --color-popover-tab-hover: #{darken($color-popover-bg-light, 8%)};
+    --color-keymap-tab-background: #{$color-bg};
 
     --color-progress-bar-bg: #{darken(theme-color('primary'), 40%)};
     --color-progress-bar-progress: #{darken(theme-color('primary'), 20%)};
